# ax-exchange-sdk

./: Cargo.toml  README.md  makefile
.claude/skills/ax-api-integration/: SKILL.md
.github/workflows/: main.yaml
examples/: create_client.rs  order_lifecycle.rs  price_streaming.rs
src/: account_gateway_client.rs  auth_gateway_client.rs  client.rs  lib.rs  types.rs  ws_utils.rs
src/api_gateway/: rest_client.rs
src/marketdata/: mod.rs  ws_client.rs
src/order_gateway/: mod.rs  rest_client.rs  ws_client.rs
src/protocol/: account_gateway.rs  api_gateway.rs  auth_gateway.rs  candle_server.rs  common.rs  marketdata_publisher.rs  mod.rs  order_gateway.rs  order_gateway_v2.rs  pagination.rs  rfq.rs  risk_manager.rs  settlement_engine.rs  sort.rs  time_range.rs  ws.rs
src/types/: auth.rs  client_order_id.rs  days_of_week.rs  ep3.rs  funding_rate_estimate.rs  funding_rate_schedule.rs  mod.rs  order_id.rs  orderbook.rs  rfq.rs  risk.rs  settlement.rs  symbol.rs  tag.rs  trading.rs  ws.rs
tests/: integration_tests.rs  smoke_tests.rs  test_funding_rate_schedule.rs
tests/common/: mod.rs
