[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance"]
description = "ArchitectX SDK"
documentation = "https://docs.rs/ax-exchange-sdk"
edition = "2024"
homepage = "https://architect.exchange"
keywords = ["trading", "finance"]
license = "AGPL-3.0-only"
name = "ax-exchange-sdk"
version = "14.2.6"

[features]
all = ["dep:schemars", "dep:utoipa"]
utoipa = ["dep:utoipa"]
schemars = ["dep:schemars"]
smoke-tests = ["tokio/macros", "tokio/rt-multi-thread"]
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.102"
dashmap = "6.2.1"
arc-swap = "1.9.1"
arcstr = "1.2.0"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["full"] }
enumflags2 = "0.7.12"
futures = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.33"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "query"] }
rust_decimal = "1.42.1"
schemars = { version = "1.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
serde_with = { version = "3.21.0", features = ["chrono"] }
sqlx = { version = "0.9.0", optional = true }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
ulid = "1.2.1"
url = "2.5.8"
utoipa = { version = "5.5.0", optional = true }
yawc = { version = "0.3.3", features = ["rustls-aws-lc-rs"] }

[dev-dependencies]
dotenv = "0.15.0"
insta = { version = "1.48.0", features = ["json"] }
regex = "1.12.4"
serde_urlencoded = "0.7.1"
simple_logger = "5.2.0"
tracing-subscriber = "0.3.23"
